# lambdaml

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.cu129  Makefile  README.md  REAMDE.md  Singularity.def.cu129  app.py  cagnn_lambda.py  cagnn_test.py  create_dataset_mc.py  model_wrapper.py  pyproject.toml  requirements-pyg-pt28-cpu.txt  requirements-pyg-pt28-cu129.txt  requirements.txt  requirements2.txt  test.py  test_updated.py  train_dagnn.py  train_dagnn_new.py
.github/workflows/: apptainer-image-cpu.yml  docker-image-cpu.yml  docker-image.yml  singularity-image-cpu.yml
app/: app.py  run_dev.py  run_prod.py
apply/: models.py  preprocessing.py
core/: __init__.py  data.py  deploy.py  models.py  optimize.py  pipeline.py  plot.py  preprocess.py  train.py  validate.py
core/lambdaml/: __init__.py  app.py  data.py  deploy.py  functional.py  log.py  models.py  optimize.py  pipeline.py  plot.py  preprocess.py  train.py  util.py  validate.py  wsgi.py
core/tests/core/: test_data.py  test_pipeline.py  test_train.py  test_validate.py
core/tests/lambdaml/: test_data.py  test_deploy.py  test_log.py  test_models.py  test_optimize.py  test_pipeline.py  test_plot.py  test_preprocess.py  test_train.py  test_util.py  test_validate.py
data/: classification.py  data.py  get_dataset.py  models.py  processing.py  regression.py  run_experiment.py  run_optimization.py  utils.py
docker/: Dockerfile.cpu
env/: env.csh  env.sh
ipynb/: Create_PyG_GIN_Dataset_1_3_24.ipynb
old/: FROMCHATGPT.py  create_dataset_data.py  dagnn_test.py  requirements.txt  select_best_model.py  seleect_best_model.py  test.py  test_updated.py  titokgnn-3.ipynb
old/apply/: apply_model.py
old/ipynb/: Train_LambdasML_1_8_24.ipynb
old/train/: classification.py  get_dataset.py  regression.py  run_experiment.py  utils.py
old/tutorials/ipynb/: train_binary_classifier.ipynb
pyscripts/: run_optimize_can.py  run_optimize_da.py  run_optimize_titok.py  run_pipeline_can.py  run_pipeline_da.py  run_pipeline_preprocessing.py  run_pipeline_titok.py  select_best_model.py  select_best_models.py
singularity/: lambdaml.def.cpu
tests/core/: __init__.py  test_data.py  test_deploy.py  test_models.py  test_optimize.py  test_pipeline.py  test_plot.py  test_preprocess.py  test_train.py  test_validate.py
train/: run_optimization.py
tutorials/ipynb/: create_pyg_dataset.ipynb
