[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaml"
version = "0.0.0"
description = "LambdaML -- ML for Lambda Hyperon Identification"
authors = [
    { name = "Matthew F. McEneaney", email = "matthew.mceneaney@duke.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torch_geometric>=2.5.3",
    "optuna>=3.5.0",
    "wandb>=0.17.5",
    "tqdm>=4.65.0",
    "particle>=0.24.0",
    "hipopy>=1.3.3",
    "numpy>=1.24.3",
    "awkward>=2.5.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "plotly>=5.23.0",
    "flask>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black"]
test = [
    "pytest>=8.0",
    "pylint",
    "black",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["core"]
